Fixed layout bug in filter panel
The sub filters were not displaying prefix and suffix correctly.

--- a/src/containers/App/styles/filter.scss
+++ b/src/containers/App/styles/filter.scss
@@ -60,13 +60,12 @@
 
 	&__control-value-wrapper {
 		padding-left: 20px;
-		display: flex;
 		align-items: center;
 
 		display: none;
 
 		&--show {
-			display: block;
+			display: flex;
 		}
 
 	}
